# claude-sdk-guide

./: .gitignore  Makefile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/src/inconvo_claude_sdk/: __init__.py  server.py  tools.py  types.py
frontend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/components/inconvo/: InconvoChart.tsx  InconvoTable.tsx  InconvoToolResult.tsx  index.ts
frontend/app/types/: inconvo.ts
frontend/app/utils/: inconvo.ts
skills/integrate-inconvo-agent/: SKILL.md
skills/integrate-inconvo-agent/agents/: openai.yaml
skills/integrate-inconvo-agent/references/inconvo_claude_sdk/: server.py  tools.py  types.py
