[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inconvo-claude-sdk-guide-backend"
version = "0.1.0"
description = "FastAPI + Claude Agent SDK example wired to Inconvo custom tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "inconvo>=0.0.3",
  "claude-agent-sdk>=0.0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
